# Burrito

./: .gitignore  Category.gd  Category.tscn  Category2D.gd  Category2D.tscn  Category3D.gd  Category3D.tscn  CategoryData.gd  FileHandler.gd  GW2Menu.gd  GlobalMenuButton.gd  Icon.gd  Icon.tscn  Icon2D.gd  Icon2D.tscn  ImportPackDialog.gd  LICENSE  LocalData.gd  LocalData.tscn  OverwriteConfirm.gd  PackDialog.gd  Path.gd  Path.tscn  Path2D.tscn  README.md  RangeDialog.gd  Route.gd  Route.tres  Route.tscn  Route2D.gd  Route2D.tscn  SelectedNode.gd  Settings.gd  SettingsDialog.gd  Spatial.gd  Spatial.gdns  Spatial.tscn  Trail.tres  Trail.tscn  Trail2D.gd  (+27 more)
burrito-fg/: Cargo.toml
burrito-fg/src/: lib.rs  xml_parser.rs
burrito_converter/: .clang-format  .gitignore  CMakeLists.txt  README.md
burrito_converter/doc/fade/: distance_fade_end.md
burrito_converter/doc/map_id/: map_type_filter.md
burrito_converter/doc/menu/: display_name.md
burrito_converter/doc/position/: height_offset.md
burrito_converter/doc/rendering/: cull_chirality.md  render_on_minimap.md
burrito_converter/doc/scale/: icon_size.md  trail_scale.md
burrito_converter/doc/schedule/: schedule_duration.md
burrito_converter/doc/size_on_screen/: maximum_size_on_screen.md
burrito_converter/doc/specialization_filter/: specialization_filter.md
burrito_converter/doc/texture/: icon.md
burrito_converter/doc/trail_data/: trail_data.md
burrito_converter/doc/trigger/: bounce_delay.md  bounce_duration.md  bounce_height.md  copy_clipboard.md  guid.md  has_countdown.md  reset_behavior.md  show_category.md  trigger_range.md
burrito_converter/generators/: jinja_helpers.py  main.py  metadata.py  run.sh
burrito_converter/generators/cpp_templates/: attribute_template_compoundvalue.cpp  attribute_template_enum.cpp  attribute_template_multiflagvalue.cpp  class_template.cpp
burrito_converter/generators/web_templates/: documentation.html  infotable.html
burrito_converter/integration_tests/: .gitignore  make_test.sh  run_tests.py
burrito_converter/integration_tests/src/: proto_utils.py  testcase_loader.py  trail_utils.py
burrito_converter/src/: argument_parser.cpp  argument_parser.hpp  burrito_converter.cpp  category_gen.cpp  file_helper.cpp  file_helper.hpp  function_timers.hpp  hash_helpers.cpp  hash_helpers.hpp  icon_gen.cpp  int_helper.cpp  int_helper.hpp  packaging_protobin.cpp  packaging_protobin.hpp  packaging_xml.cpp  packaging_xml.hpp  rapid_helpers.cpp  string_helper.cpp  string_helper.hpp  string_hierarchy.cpp  string_hierarchy.hpp  trail_gen.cpp  trail_gen.hpp
burrito_converter/src/attribute/: bool.cpp  bool.hpp  bounce_gen.cpp  color.cpp  cull_chirality_gen.cpp  euler_rotation_gen.cpp  euler_rotation_gen.hpp  festival_filter_gen.hpp  float.cpp  float.hpp  image.cpp  image.hpp  int.cpp  int.hpp  map_type_filter_gen.cpp  map_type_filter_gen.hpp  marker_category.cpp  marker_category.hpp  mount_filter_gen.hpp  position_gen.cpp  profession_filter_gen.cpp  reset_behavior_gen.cpp  species_filter_gen.cpp  species_filter_gen.hpp  string.cpp  string.hpp  trail_data.hpp  unique_id.hpp
burrito_converter/src/miniz-3.0.2/: miniz.cpp
burrito_converter/src/state_structs/: proto_writer_state.cpp  proto_writer_state.hpp  xml_writer_state.hpp
burrito_converter/tests/: test_argument_parser.cpp  test_base64.cpp  test_hash_helpers.cpp
burrito_converter/xml_pack_sources/: .gitignore  database.yaml  gather_marker_packs.py
burrito_link/: .clang-format  .gitignore  CMakeLists.txt  Makefile  burrito_link.c  deffile.def  dllmain.c  dllmain_nexus.c  gw2mumbleudp.c  linked_memory.h  presubmit.sh  serializer.h
burrito_link/integration_tests/: data.h  main.c
taco_parser/: Cargo.toml  README.md
taco_parser/data/: dw_coral.xml  test.xml  trail_bloodstone_fen_1.trl  trail_drizzlewood_coral.trl  tw_festival01_lunarnewyear.xml
taco_parser/src/: lib.rs  trail_parser.rs  xml_parser.rs  xml_parser_tests.rs
xml_converter/: .clang-format  .gitignore  CMakeLists.txt  README.md  attribute_test_script.sh  presubmit.sh  refresh.sh  requirements.txt
xml_converter/doc/: achievement.md  alpha.md  can_fade.md  category.md  fade.md  festival_filter.md  is_wall.md  map_id.md  menu.md  mount_filter.md  position.md  profession_filter.md  rendering.md  rotation.md  scale.md  schedule.md  size_on_screen.md  specialization_filter.md  species_filter.md  texture.md  tooltip.md  trail_data.md  trigger.md
xml_converter/doc/acheivement/: achievement_bit_index.md  achievement_bitmask.md  achievement_id.md
xml_converter/doc/alpha/: alpha.md
xml_converter/doc/can_fade/: can_fade.md
xml_converter/doc/category/: category.md
xml_converter/doc/fade/: distance_fade_end.md  (+1 more)
xml_converter/generators/: code_generator.py  generate_cpp.py  jinja_helpers.py  main.py  metadata.py  presubmit.sh  protobuf_types.py  requirements.txt  schema.py  util.py
xml_converter/integration_tests/: make_test.sh  run_tests.py
xml_converter/intigration_tests/: make_test.sh  proto_utils.py  run_tests.py  testcases.py
xml_converter/proto/: CMakeLists.txt  guildpoint.proto  waypoint.proto
xml_converter/src/: Imbiber.py  argument_parser.cpp  argument_parser.hpp  category.cpp  category.hpp  category_gen.cpp  category_gen.hpp  file_helper.cpp  file_helper.hpp  function_timers.cpp  function_timers.hpp  hash_helpers.cpp  hash_helpers.hpp  icon.cpp  icon.hpp  icon_gen.cpp  icon_gen.hpp  int_helper.hpp  packaging_protobin.cpp  packaging_protobin.hpp  packaging_xml.cpp  packaging_xml.hpp  parseable.cpp  parseable.hpp  rapid_helpers.cpp  rapid_helpers.hpp  string_helper.cpp  string_helper.hpp  string_hierarchy.cpp  string_hierarchy.hpp  trail.cpp  trail.hpp  trail_gen.cpp  trail_gen.hpp  waypoint.pb.cc  waypoint.pb.h  xml_converter.cpp
xml_converter/test_cases/: test_expected_outputs.json
xml_converter/tests/: attribute_testing.py  main_test.cpp  test_argument_parser.cpp  test_bool.cpp  test_cases.json  test_expected_outputs.json  test_file_helper.cpp  test_string_hierarchy.cpp  test_xml_to_xml.cpp
xml_converter/xml_pack_sources/: .gitignore
(+498 files in other folders)
