[package]
name = "burrito-fg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9"
breadx = "2"
nom = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0"